--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: DevOps 10 CI
+name: Devops 10 CI
 
 on:
   pull_request:
@@ -9,8 +9,8 @@ jobs:
   install:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.2.0
-      - uses: actions/setup-node@v3.5.1
+      - uses: actions/checkout@v3.3.0
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.14
           cache: "npm"
@@ -20,8 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [install]
     steps:
-      - uses: actions/checkout@v3.2.0
-      - uses: actions/setup-node@v3.5.1
+      - uses: actions/checkout@v3.3.0
+      - uses: actions/setup-node@v3.6.0
         with:
           node-version: 16.14
           cache: "npm"
@@ -32,8 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [install]
     steps:
-      - uses: actions/checkout@v3.2.0
-      - uses: actions/setup-node@v3.5.1
+      - uses: actions/checkout@v3.3.0
+      - uses: actions/setup-node@v3.6.0
         with:
           node-version: 16.14
           cache: "npm"
@@ -43,8 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [code_quality, test]
     steps:
-      - uses: actions/checkout@v3.2.0
-      - uses: actions/setup-node@v3.5.1
+      - uses: actions/checkout@v3.3.0
+      - uses: actions/setup-node@v3.6.0
         with:
           node-version: 16.14
           cache: "npm"
